--- a/index.html
+++ b/index.html
@@ -200,7 +200,8 @@
           <div class="span6 offset3 order">
             <!-- Standard Bootstrap button. -->
             <!-- http://twitter.github.io/bootstrap/base-css.html#buttons -->
-            <button class="btn btn-success btn-large">Preorder</button>
+           <a class="coinbase-button" data-button-style="custom_large" data-button-text="Preorder with Bitcoin"  data-code="f6ccaab8c8bc7a9862f9a8fad047f76f" href="https://coinbase.com/checkouts/f6ccaab8c8bc7a9862f9a8fad047f76f">Preorder with Bitcoin</a>
+<script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
           </div>
           <div class="span8 offset2 social">
             	<!-- AddThis Button BEGIN -->
